; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/arm/aarch64/extr_aarch64-dis.c_print_aarch64_insn.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/arm/aarch64/extr_aarch64-dis.c_print_aarch64_insn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.disassemble_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.TYPE_5__*, %struct.disassemble_info*)* @print_aarch64_insn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_aarch64_insn(i32 %0, %struct.TYPE_5__* %1, %struct.disassemble_info* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.disassemble_info*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  store %struct.disassemble_info* %2, %struct.disassemble_info** %6, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %8 = load %struct.disassemble_info*, %struct.disassemble_info** %6, align 8
  %9 = call i32 @print_mnemonic_name(%struct.TYPE_5__* %7, %struct.disassemble_info* %8)
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.disassemble_info*, %struct.disassemble_info** %6, align 8
  %18 = call i32 @print_operands(i32 %10, i32 %13, i32 %16, %struct.disassemble_info* %17)
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %20 = load %struct.disassemble_info*, %struct.disassemble_info** %6, align 8
  %21 = call i32 @print_comment(%struct.TYPE_5__* %19, %struct.disassemble_info* %20)
  ret void
}

declare dso_local i32 @print_mnemonic_name(%struct.TYPE_5__*, %struct.disassemble_info*) #1

declare dso_local i32 @print_operands(i32, i32, i32, %struct.disassemble_info*) #1

declare dso_local i32 @print_comment(%struct.TYPE_5__*, %struct.disassemble_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
